add Party Calculator Example

--- a/Lecture08-Examples/Example01/Example01.csproj
+++ b/Lecture08-Examples/Example01/Example01.csproj
@@ -54,5 +54,8 @@
       <Name>PokemonLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Form1.resx" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
